MakeCatalog can calculate the median value
For calculating the surface brightness limit of extended and diffuse
objects, the average (brightness/area) can be too strongly affected by
outliers. So MakeCatalogs will now also calculate the median of pixel
values.

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   cumulative frequency plots to be set outside the minimum or maximum
   values of the dataset.
 
+  MakeCatalog: The new `--median' option will calculate the median pixel
+  value within an object or clump.
+
 ** Removed features
 
 ** Changed features
