--- a/THANKS
+++ b/THANKS
@@ -24,6 +24,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Adrian Bunk                          bunk@debian.org
     Rosa Calvi                           rcalvi@iac.es
     Benjamin Clement                     benjamin.clement@univ-lyon1.fr
+    Nima Dehdilani                       nimadehdilani@gmail.com
     Antonio Diaz Diaz                    antonio@gnu.org
     Thérèse Godefroy                     godef.th@free.fr
     Madusha Gunawardhana                 gunawardhana@strw.leidenuniv.nl
@@ -52,6 +53,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Ignacio Trujillo                     trujillo@iac.es
     David Valls-Gabaud                   david.valls-gabaud@obspm.fr
     Christopher Willmer                  cnaw@as.arizona.edu
+    Sara Yousefi                         s.yousefi.t@gmail.com
 
 
 Teams
