Input kernel no longer mandatory for NoiseChisel
NoiseChisel no longer needs an input kernel to operate. In such situations,
from now on, a value of `none' can be passed to the `--kernel' option.

During the work, I noticed that the `INFO_NFF' macro defined in
`bin/noisechisel/clumps.c' doesn't do what its name suggests (count
numbers). It actually keeps the sum of pixels above zero, not the number
(as explained in the comments). So the name and comments of this variable
were also corrected.

This issue (to disable convolution), was motivated by a test run and
discussion with Aaron Watkins.

--- a/NEWS
+++ b/NEWS
@@ -5,12 +5,15 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  MakeCatalog: The new `--mean' and `--median' options will calculate the
+  mean and median pixel value within an object or clump respectively.
+
+  NoiseChisel: a value of `none' to the `--kernel' option will disable
+  convolution.
+
   Statistics: the new `--manualbinrange' allows the bins in histograms or
   cumulative frequency plots to be set outside the minimum or maximum
   values of the dataset.
-
-  MakeCatalog: The new `--mean' and `--median' options will calculate the
-  mean and median pixel value within an object or clump respectively.
 
 ** Removed features
 
