--- a/THANKS
+++ b/THANKS
@@ -52,6 +52,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Éric Thiébaut                        eric.thiebaut@univ-lyon1.fr
     Ignacio Trujillo                     trujillo@iac.es
     David Valls-Gabaud                   david.valls-gabaud@obspm.fr
+    Aaron Watkins                        aaron.watkins@oulu.fi
     Christopher Willmer                  cnaw@as.arizona.edu
     Sara Yousefi                         s.yousefi.t@gmail.com
 
