Edits in quantifying measurement limits section of book
I went through this section and made some minor corrections to be more
clear, readable and accurate.

Also, Sara Yousefi Taemeh's full name has been corrected in the `THANKS'
and `doc/announce-acknowledge.txt' files.

--- a/THANKS
+++ b/THANKS
@@ -54,7 +54,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     David Valls-Gabaud                   david.valls-gabaud@obspm.fr
     Aaron Watkins                        aaron.watkins@oulu.fi
     Christopher Willmer                  cnaw@as.arizona.edu
-    Sara Yousefi                         s.yousefi.t@gmail.com
+    Sara Yousefi Taemeh                  s.yousefi.t@gmail.com
 
 
 Teams
