Position in upperlimit distribution (sigma and quantile)
Three new options are now added to MakeCatalog: two will allow identifying
the position of an object or clump within the upper-limit distribution, and
another can be used to identify the upper limit distribution irrespective
of the `--upnsigma' value.

Also, while working on the quantile position, I noticed that the fact that
`gal_statistics_quantile_function' only returned a NaN when the value was
out of range was not too meaningful (is it smaller than the minimum or
larger than the maximum for example). So now, it returns `inf' or `-inf' to
specify in which direction the value is out of range.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   MakeCatalog: The new `--mean' and `--median' options will calculate the
   mean and median pixel value within an object or clump respectively.
 
+  MakeCatalog: The new `--upperlimitsigma' and `--upperlimitquantile'
+  columns will report the postion of the object's brightness with respect
+  to the distribution of randomly measured values. The former as a multiple
+  of sigma and the latter as a quantile. Also, `--upperlimitonesigma' will
+  return the 1-sigma value of the randomly placed upper limit magnitudes
+  (irrespective of the value given to `--upnsigma').
+
   NoiseChisel: a value of `none' to the `--kernel' option will disable
   convolution.
 
@@ -18,6 +25,10 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 ** Removed features
 
 ** Changed features
+
+  Libraries: `gal_statistics_quantile_function' returns `inf' or `-inf' if
+  the given value is smaller than the minimum or larger than the maximum of
+  the input dataset's range.
 
 ** Bug fixes
 
