NoiseChisel checks if there was any detection
Until now, NoiseChisel assumed that there is always a detection. It would
thus crash if there wasn't any. So a check was added after the detection
step so NoiseChisel continues only when there are any detections.

This issue came up in a dataset provided by Sara Yousefi Taemeh.

This fixes bug #53304.

--- a/NEWS
+++ b/NEWS
@@ -48,6 +48,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   MakeCatalog parses area larger than clump (bug #53295).
 
+  NoiseChisel crash when there is no detection (bug #53304).
+
 
 
 * Noteworthy changes in release 0.5 (library 3.0.0) (2017-12-22) [stable]
